@@ -208,6 +208,9 @@ of their choices.
    such a connection if any clause that accepts any connections to that port
    precedes all clauses (if any) that reject all connections to that port.
 
+   Unless requested to do so by the user, we never choose a server flagged by
+   more than half of the authorities as BadExit for an exit server.
+
 2.2.2. User configuration
 
    Users can alter the default behavior for path selection with configuration
